--- a/trunk/iso2mesh/TODO.txt
+++ b/trunk/iso2mesh/TODO.txt
@@ -5,16 +5,13 @@
 == high priority ==
 
 * detect multi-value interfaces (i.e. voxels where more than 2 values meet) \
-and perturb the levelset surface mesh to avoid intersection [proposed on 02/11/09]
-
-* if one levelset contains multiple disjointed surfaces, separate them, \
-and do sub-region labeling for each component [proposed on 02/11/09]
+and perturb the levelset surface mesh to avoid intersection [proposed on 2009/02/11]
 
 == low priority ==
 
-* 2D image-based mesh generation support ? [proposed on 02/11/09]
+* 2D image-based mesh generation support ? [proposed on 2009/02/11]
 
-* adaptive refining [proposed on 02/11/09]
+* adaptive refining [proposed on 2009/02/11]
 
 * moving mesh
 
@@ -28,10 +25,14 @@ and do sub-region labeling for each component [proposed on 02/11/09]
 files were opened but not closed and can not be deleted \
 - done, by FangQ 2009/05/04
 
-* processing gray-scale images directly [proposed on 02/11/09] \
+* processing gray-scale images directly [proposed on 2009/02/11] \
 - done, by FangQ 2009/05/04
 
 * setting RNG seeds when calling CGAL tools to ensure repeatibility \
-of the meshing [proposed 07/17/2010] \
+of the meshing [proposed 2010/07/17] \
 - done, by FangQ 2010/11/08
+
+* if one levelset contains multiple disjointed surfaces, separate them, \
+and do sub-region labeling for each component [proposed on 2009/02/11]
+- done, by FangQ 2011/02/26
 
