--- a/doc/INSTALL.txt
+++ b/doc/INSTALL.txt
@@ -17,8 +17,8 @@ System Requirements
    The recommended system configuration for running this toolbox includes
      * a computer running GNU/Linux, Windows, Mac OS (either 32bit/64bit)
      * standard installation of Matlab (v7 or above) or Octave (3.0 or
-       above) (for demo 3, you need to install image processing toolbox
-       for maltab/octave)
+       above) (for some demos, you need to install the image processing
+       toolbox for maltab/octave)
      * 20M disk space for the toolbox and the examples
      * a folder where you have write permission
 
@@ -54,17 +54,17 @@ For restricted users
    encounter is the "permission error" when saving the "pathtool" path
    list in order to add iso2mesh permanently. If this happens, you may
    work in a multi-user or network-based system. For Matlab users, you
-   typically need to create file named [5]startup.m under your home
-   directory (~/matlab/ for Linux/Unix), and put
+   typically need to create file named [5]startup.m under the [6]Matlab
+   startup directory (~/matlab/ for Linux/Unix), and put
    addpath('/path/to/iso2mesh/'); into this file. It will be automatically
-   executed when Matlab starts. For Octave, this file is [6].octaverc.
+   executed when Matlab starts. For Octave, this file is [7].octaverc.
 
    When using this toolbox under an extensively restricted mode, one may
-   encounter a "write to file" error, this may likely be caused by the
+   encounter a "fail to write" error, this may likely be caused by the
    default output folder is not writable from your account. If you do have
    another folder which you have permission to write, you need to
-   [7]define an variable ISO2MESH_TEMP in Matlab/Octave's "base workspace"
-   and set the value as the writable folder path, then rerun your meshing
+   [8]define an variable ISO2MESH_TEMP in Matlab/Octave's "base workspace"
+   and set the value as the writable folder path, then rer-un your meshing
    commands.
 
 References
@@ -74,5 +74,6 @@ References
    3. https://orbit.nmr.mgh.harvard.edu/plugins/scmcvs/cvsweb.php/?cvsroot=iso2mesh
    4. http://iso2mesh.sourceforge.net/cgi-bin/index.cgi?Doc/AddPath
    5. http://www.mathworks.com/access/helpdesk/help/techdoc/matlab_env/f8-4994.html#brlkmbe-1
-   6. http://en.wikibooks.org/wiki/MATLAB_Programming/Differences_between_Octave_and_MATLAB#startup.m
-   7. http://iso2mesh.sourceforge.net/cgi-bin/index.cgi?Advanced
+   6. http://www.mathworks.com/help/techdoc/matlab_env/f8-10506.html
+   7. http://en.wikibooks.org/wiki/MATLAB_Programming/Differences_between_Octave_and_MATLAB#startup.m
+   8. http://iso2mesh.sourceforge.net/cgi-bin/index.cgi?Advanced
