--- a/trunk/iso2mesh/AUTHORS.txt
+++ b/trunk/iso2mesh/AUTHORS.txt
@@ -1,4 +1,4 @@
-The author of "iso2mesh" toolbox is Qianqian Fang. Qianqian 
+The author of "iso2mesh" toolbox is Qianqian Fang PhD. Dr. Fang
 is currently an Instructor at Massachusetts General Hospital, 
 Harvard Medical School.
 
@@ -7,7 +7,7 @@ Address: Martinos Center for Biomedical Imaging,
          Harvard Medical School
          Bldg 149, 13th St, Charlestown, MA 02129, USA
 URL: http://nmr.mgh.harvard.edu/~fangq/
-Email: <fangq at nmr.mgh.harvard.edu>
+Email: <fangq at nmr.mgh.harvard.edu> or <fangqq at gmail.com>
 
 
 Other people had also contributed to this toolbox, they include
